--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,13 +1,41 @@
 <% set_page_title "About" %>
-<h4 class="page-header">About TIOJ <small>INFOR Online Judge <%= Tioj::VERSION %></small></h4>
-<h5>Site Info</h5>
+<h4 class="page-header">About NLOJ </h4>
+<h5>NLOJ Contributors</h5>
 <div class="well">
-This site is powered by Ruby on Rails! <br >
+  網站維護: <br>
+  潘鈺程(Cheng0928)<br>
+  薛詠謙(simplykyle)<br >
+</div>
+<h4>History</h4>
+<h5>2024.9</h5>
+<div class="well">
+NLOJ 正式上線！使用 TIOJ 進行架站！
+</div>
+<h5>源起</h5>
+<div class="well">
+  由於 潘鈺程(Cheng0928) 太想在高中時打競程，卻發現了校內找不到隊友的問題，於是發起了「內高資訊讀書會」的計畫。 <br>
+  在國輝老師的支持之下，讀書會成功創立，但卻沒有一個校內的題目練習平台。<br>
+  所以找了 薛詠謙(simplykyle) 一起建置 NLOJ。
+</div>
+<h5>聯絡資訊</h5>
+<div class="well">
+  第 7<sup>th<sup> 內高資研 IG：<a href="https://www.instagram.com/nlcs_7th/">@nlcs_7th</a> <br>
+  潘鈺程(Cheng0928) Discord：cheng0928<br>
+  薛詠謙(simplykyle) Discord：justsimplykyle<br >
+</div>
+<h5>NLOJ 贊助</h5>
+<div class="well">
+  主機贊助: <br >
+  NCSE Network<br >
+</div>
+<h5>TIOJ <small>INFOR Online Judge <%= Tioj::VERSION %></small> Info</h5>
+<div class="well">
+TIOJ is powered by Ruby on Rails! <br >
 TIOJ Github Repo: <a href="https://github.com/TIOJ-INFOR-Online-Judge/tioj">https://github.com/TIOJ-INFOR-Online-Judge/tioj</a> <br>
 Judge System Github Repo: <a href="https://github.com/TIOJ-INFOR-Online-Judge/tioj-judge">https://github.com/TIOJ-INFOR-Online-Judge/tioj-judge</a> <br>
 Still in development, any issues or pull requests are welcomed. <br >
 </div>
-<h5>Contributors</h5>
+<h5>TIOJ Contributors</h5>
 <div class="well">
   Developers: <br >
   建資25<sup>th</sup> 蕭從恩(joshua5201)<br>
@@ -20,32 +48,4 @@ Still in development, any issues or pull requests are welcomed. <br >
   IOI 29<sup>th</sup> 蘇柏瑄(briansu) <br>
   INFOR 29<sup>th</sup> 陳冠宇(edisonhello) <br>
 </div>
-<h4>History</h4>
-<h5>2014.8</h5>
-<div class="well">
-正式版網頁上線。將舊TIOJ的題目資料migrate過來。
-</div>
-<h5>2014.7</h5>
-<div class="well">
-測試版網頁上線，於建中暑期程式設計快樂營作為練習平台。
-</div>
-<h5>2014.5</h5>
-<div class="well">
-建電34<sup>th</sup>的丁安立(anlialtting)加入開發團隊。
-</div>
-<h5>2014.4</h5>
-<div class="well">
-建資25<sup>th</sup>的江懿友(silverneko)加入開發團隊。
-於即將踏入五月時資料庫換到MySQL2。
-</div>
-<h5>2014.1</h5>
-<div class="well">
-於2014年農曆除夕夜前建資25<sup>th</sup>的陳家陞(qitar888)與蕭從恩(joshua5201)商討TIOJ復站事宜，<br>
-後以時下最新的Rails4搭配預設的SQLite3做為資料庫開工。
-</div>
-<h5>源起</h5>
-<div class="well">
-  在資訊社有悠久傳統的TIOJ(Temporary INFOR Online Judge)，蒐集了上千題優秀題目，是許多人啟蒙及增強實力的平台。<br />
-  因為系統老舊故障，有兩屆的時間建中校隊只能到處找別人的Judge寫題目。也由於缺乏一個穩定的培訓環境，導致校隊培訓不易。
-  <br>只能借用建中65<sup>th</sup>黃凱祺學長架的step5權做校隊培訓Judge，但是step5畢竟是新架的OnlineJudge，缺乏歷屆學長辛苦搜集來的題目們，所以考完學測的建資25<sup>th</sup>們便揪團試著將TIOJ復站。
-</div>
+
