--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -19,7 +19,7 @@ NLOJ 正式上線！使用 TIOJ 進行架站！
 </div>
 <h5>聯絡資訊</h5>
 <div class="well">
-  第 7<sup>th<sup> 內高資研 IG：<a href="https://www.instagram.com/nlcs_7th/">@nlcs_7th</a> <br>
+  第 7<sup>th</sup> 內高資研 IG：<a href="https://www.instagram.com/nlcs_7th/">@nlcs_7th</a> <br>
   潘鈺程(Cheng0928) Discord：cheng0928<br>
   薛詠謙(simplykyle) Discord：justsimplykyle<br >
 </div>
